--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %} Todo-List {% endblock %}
+{% block content %}
+
 <h1>Hello from home page</h1>
-</body>
-</html>
+
+{% endblock%}
