added navbar and routes

--- a/todo_list/templates/about.html
+++ b/todo_list/templates/about.html
@@ -3,6 +3,6 @@
 {% block title %} Todo-List {% endblock %}
 {% block content %}
 
-<h1>Hello from home page</h1>
-
+<h1>About my project</h1>
+<h4> My Name is {{ name }}</h4>
 {% endblock %}
