--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>{% block title %}My Apps {% endblock %}</title>
 </head>
 <body>
@@ -28,8 +30,9 @@
 
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Todo Item" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" method="POST">
+            {% csrf_token %}
+            <input class="form-control mr-sm-2" type="text" placeholder="Todo Item" aria-label="Search" name="item">
             <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Add To List</button>
         </form>
     </div>
