--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -2,11 +2,21 @@
 
 {% block title %} Todo-List {% endblock %}
 {% block content %}
+{% if messages %}
+{% for msg in messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{ msg }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+{% endfor %}
+{% endif %}
 {% if all_items %}
 <table class="table table-bordered">
     {% for items in all_items %}
     {% if items.completed%}
-    <tr  class="table-secondary">
+    <tr class="table-secondary">
         <td class="striker">{{ items.item }}</td>
         <td>
             <center>{{ items.completed }}</center>
